--- a/src/index.css
+++ b/src/index.css
@@ -1,22 +1,16 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
-}
-
-h1 {
-  font-family: sans-serif;
+.Header {
+  font-family: "Source Serif Pro", serif;
   text-align: center;
-  font-size: 50px;
-  color: purple;
+  font-weight: bold;
+}
+.Header h1 {
+  font-size: 80px;
+  margin-top: 0;
+  color: #32314c;
+}
+.Header img {
+  max-width: 200px;
+  margin-top: 50px;
 }
 .App {
   text-align: center;
