--- a/src/index.css
+++ b/src/index.css
@@ -7,9 +7,11 @@ body {
   font-weight: bold;
 }
 .Header h1 {
-  font-size: 70px;
+  font-size: 60px;
   margin-top: 0;
   color: #32314c;
+  font-weight: bold;
+  line-height: 1;
 }
 .Header img {
   max-width: 180px;
@@ -17,5 +19,5 @@ body {
 }
 .SearchBar {
   text-align: center;
-  font-family: sans-serif;
+  font-family: "Poppins", sans-serif;
 }
