--- a/src/App.css
+++ b/src/App.css
@@ -17,3 +17,8 @@
   margin-top: 25px;
   margin-bottom: 70px;
 }
+.loader {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 45px;
+}
